tests/samples/negative/generics/generic_struct_type_arity.ax
module generic_struct_type_arity;

struct Pair<T> {
    left: T;
    right: T;
}

fn main() -> i32 {
    let pair: Pair = Pair<i32> {
        left: 1,
        right: 2,
    };
    return pair.left;
}
